--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -41,6 +41,12 @@ eureka:
       defaultZone: http://netflix-eureka-server:8761/eureka/
       
 ---
+spring:
+  cloud:
+    inetutils:
+      ignoredInterfaces:
+        - docker0
+        - veth.*
 management.endpoints.web:
   exposure.include: '*'
   base-path: /actuator
@@ -49,7 +55,7 @@ eureka:
     region: korea
   instance:
     prefer-ip-address: true
-    instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
-    statusPageUrlPath: ${management.endpoints.web.base-path}/info
-    healthCheckUrlPath: ${management.endpoints.web.base-path}/health
+    instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
+    status-page-url-path: ${management.endpoints.web.base-path}/info
+    health-check-url-path: ${management.endpoints.web.base-path}/health
     
