--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -30,15 +30,18 @@ spring:
     profiles: dockerdev
     cloud:
         config:
-            uri: http://config-server:8888
+#            uri: http://config-server:8888
+            uri: http://192.168.0.11:8888
     boot:
       admin:
         client:
-          url: http://admin-server:8889
+#          url: http://admin-server:8889
+          url: http://192.168.0.11:8889
 eureka:
   client:
     service-url:
-      defaultZone: http://netflix-eureka-server:8761/eureka/
+#      defaultZone: http://netflix-eureka-server:8761/eureka/
+      defaultZone: http://192.168.0.11:8761/eureka/
       
 ---
 spring:
