--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -40,8 +40,8 @@ spring:
 eureka:
   client:
     service-url:
-#      defaultZone: http://netflix-eureka-server:8761/eureka/
-      defaultZone: http://192.168.0.11:8761/eureka/
+#      defaultZone: http://netflix-eureka-server:8761/eureka
+      defaultZone: http://192.168.0.11:8761/eureka
       
 ---
 spring:
@@ -61,7 +61,8 @@ eureka:
     region: korea
   instance:
     prefer-ip-address: true
-    instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
+    hostname: ${vcap.application.uris[0]}
+    instance-id: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
     status-page-url-path: ${management.endpoints.web.base-path}/info
     health-check-url-path: ${management.endpoints.web.base-path}/health
     
