--- a/bluesky-boot-docs/pom.xml
+++ b/bluesky-boot-docs/pom.xml
@@ -23,55 +23,89 @@
 			<groupId>net.luversof.boot</groupId>
 			<artifactId>bluesky-boot-starter</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.restdocs</groupId>
+			<artifactId>spring-restdocs-mockmvc</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>net.luversof.boot</groupId>
+			<artifactId>bluesky-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
+
 	</dependencies>
-
-
-
+	<dependencyManagement>
+		<dependencies>
+		</dependencies>
+	</dependencyManagement>
 	<build>
-		<defaultGoal>process-resources</defaultGoal>
 		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<includes>
+						<include>**/*Documentation.java</include>
+					</includes>
+					<argLine>-Dspring.profiles.active=local</argLine>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.asciidoctor</groupId>
 				<artifactId>asciidoctor-maven-plugin</artifactId>
-				<version>${asciidoctor.maven.plugin.version}</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.asciidoctor</groupId>
-						<artifactId>asciidoctorj</artifactId>
-						<version>${asciidoctorj.version}</version>
-					</dependency>
-				</dependencies>
-				<configuration>
-					<!-- If you set baseDir to ${project.basedir}, top-level includes are 
-						resolved relative to the project root -->
-					<!-- <baseDir>${project.basedir}</baseDir> -->
-					<!-- Attributes common to all output formats -->
-					<attributes>
-						<revnumber>${project.version}</revnumber>
-						<revdate>${maven.build.timestamp}</revdate>
-						<organization>${project.organization.name}</organization>
-					</attributes>
-				</configuration>
+				<version>1.5.3</version>
 				<executions>
 					<execution>
-						<id>asciidoc-to-html</id>
-						<phase>generate-resources</phase>
+						<id>generate-docs</id>
+						<phase>prepare-package</phase>
 						<goals>
 							<goal>process-asciidoc</goal>
 						</goals>
 						<configuration>
-							<backend>html5</backend>
+							<backend>html</backend>
+							<doctype>book</doctype>
 							<preserveDirectories>true</preserveDirectories>
-							<sourceHighlighter>coderay</sourceHighlighter>
-							<attributes>
-								<toc>left</toc>
-								<icons>font</icons>
-								<sectanchors>true</sectanchors>
-								<!-- set the idprefix to blank -->
-								<idprefix />
-								<idseparator>-</idseparator>
-								<docinfo1>true</docinfo1>
-							</attributes>
+						</configuration>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.springframework.restdocs</groupId>
+						<artifactId>spring-restdocs-asciidoctor</artifactId>
+						<version>${spring-restdocs.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.outputDirectory}/static/docs</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${project.build.directory}/generated-docs</directory>
+								</resource>
+							</resources>
 						</configuration>
 					</execution>
 				</executions>
