--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.gitignore.io/api/git,java,maven,eclipse,sonarqube,intellij+iml,visualstudiocode
-# Edit at https://www.gitignore.io/?templates=git,java,maven,eclipse,sonarqube,intellij+iml,visualstudiocode
+# Created by https://www.gitignore.io/api/git,java,maven,eclipse,sonarqube,intellij+all,visualstudiocode
+# Edit at https://www.gitignore.io/?templates=git,java,maven,eclipse,sonarqube,intellij+all,visualstudiocode
 
 ### Eclipse ###
 .metadata
@@ -86,7 +86,7 @@ local.properties
 *_LOCAL_*.txt
 *_REMOTE_*.txt
 
-### Intellij+iml ###
+### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
@@ -156,13 +156,21 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-### Intellij+iml Patch ###
+### Intellij+all Patch ###
+# Ignores the whole .idea folder and all .iml files
+# See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
+
+.idea/
+
 # Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
 
 *.iml
 modules.xml
 .idea/misc.xml
 *.ipr
+
+# Sonarlint plugin
+.idea/sonarlint
 
 ### Java ###
 # Compiled class file
@@ -224,4 +232,4 @@ buildNumber.properties
 # Ignore all local history of files
 .history
 
-# End of https://www.gitignore.io/api/git,java,maven,eclipse,sonarqube,intellij+iml,visualstudiocode
+# End of https://www.gitignore.io/api/git,java,maven,eclipse,sonarqube,intellij+all,visualstudiocode
