--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -14,6 +14,7 @@
 		<bluesky-boot.version>0.0.1-SNAPSHOT</bluesky-boot.version>
 		<spring-boot.version>2.1.9.RELEASE</spring-boot.version>
 		<spring-cloud.version>Greenwich.SR3</spring-cloud.version>
+		<junit-jupiter.version>5.5.2</junit-jupiter.version> <!-- 임시 처리 -->
 	</properties>
 	<dependencyManagement>
 		<dependencies>
