--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -12,9 +12,8 @@
 	<properties>
 		<java.version>11</java.version>
 		<bluesky-boot.version>0.0.1-SNAPSHOT</bluesky-boot.version>
-		<spring-boot.version>2.1.9.RELEASE</spring-boot.version>
-		<spring-cloud.version>Greenwich.SR3</spring-cloud.version>
-		<junit-jupiter.version>5.5.2</junit-jupiter.version> <!-- 임시 처리 -->
+		<spring-boot.version>2.2.0.RELEASE</spring-boot.version>
+		<spring-cloud.version>Hoxton.M3</spring-cloud.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -87,7 +86,7 @@
 			<dependency>
 				<groupId>org.mybatis.spring.boot</groupId>
 				<artifactId>mybatis-spring-boot-starter</artifactId>
-				<version>2.0.0</version>
+				<version>2.1.0</version>
 			</dependency>
 			<!-- (e) mybatis -->
 
@@ -116,12 +115,6 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-test</artifactId>
 				<version>${spring-boot.version}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>junit</groupId>
-						<artifactId>junit</artifactId>
-					</exclusion>
-				</exclusions>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
