--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -71,12 +71,12 @@ spring:
 #management.endpoints.web:
 #  exposure.include: '*'
 #  base-path: /actuator
-#eureka:
-#  client:
-#    region: korea
-#  instance:
-#    prefer-ip-address: true
-#    instance-id: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
-#    status-page-url-path: ${management.endpoints.web.base-path}/info
-#    health-check-url-path: ${management.endpoints.web.base-path}/health
+eureka:
+  client:
+    region: korea
+  instance:
+    prefer-ip-address: true
+    instance-id: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
+    status-page-url-path: ${management.endpoints.web.base-path}/info
+    health-check-url-path: ${management.endpoints.web.base-path}/health
     
