--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -118,7 +118,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	<profiles>
+<!-- 	<profiles>
 		<profile>
 			<id>dockerdev</id>
 			<repositories>
@@ -168,5 +168,5 @@
 			<id>spring-milestones</id>
 			<url>http://repo.spring.io/milestone</url>
 		</pluginRepository>
-	</pluginRepositories>
+	</pluginRepositories> -->
 </project>
