--- a/bluesky-boot-docs/pom.xml
+++ b/bluesky-boot-docs/pom.xml
@@ -9,10 +9,6 @@
 		<relativePath>../bluesky-boot-parent</relativePath>
 	</parent>
 	<artifactId>bluesky-boot-docs</artifactId>
-	<properties>
-		<main.basedir>${basedir}/../..</main.basedir>
-		<asciidoctor.maven.plugin.version>1.5.8</asciidoctor.maven.plugin.version>
-	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>net.luversof.boot</groupId>
@@ -42,6 +38,13 @@
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>io.spring.docresources</groupId>
+			<artifactId>spring-doc-resources</artifactId>
+			<version>${spring-doc-resources.version}</version>
+			<type>zip</type>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -52,6 +55,51 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>unpack-doc-resources</id>
+						<goals>
+							<goal>unpack-dependencies</goal>
+						</goals>
+						<phase>generate-resources</phase>
+						<configuration>
+							<includeGroupIds>io.spring.docresources</includeGroupIds>
+							<includeArtifactIds>spring-doc-resources</includeArtifactIds>
+							<includeTypes>zip</includeTypes>
+							<excludeTransitive>true</excludeTransitive>
+							<outputDirectory>${refdocs.build.directory}</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-asciidoc-resources</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${refdocs.build.directory}</outputDirectory>
+							<resources>
+								<resource>
+									<directory>src/main/asciidoc</directory>
+									<filtering>false</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+				<configuration>
+					<sourceDirectory>${refdocs.build.directory}</sourceDirectory>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.asciidoctor</groupId>
@@ -72,13 +120,22 @@
 							<goal>process-asciidoc</goal>
 						</goals>
 						<configuration>
+							<sourceDirectory>${refdocs.build.directory}</sourceDirectory>
 							<backend>html5</backend>
-							<sourceHighlighter>coderay</sourceHighlighter>
+							<sourceHighlighter>highlight.js</sourceHighlighter>
 							<preserveDirectories>true</preserveDirectories>
 							<outputDirectory>src/main/resources/static</outputDirectory>
 							<attributes>
+								// these attributes are required to use the doc resources
+								<docinfo>shared</docinfo>
+								<stylesdir>css/</stylesdir>
+								<stylesheet>spring.css</stylesheet>
+								<linkcss>true</linkcss>
+								<icons>font</icons>
+								<highlightjsdir>js/highlight</highlightjsdir>
+								<highlightjs-theme>github</highlightjs-theme>
+								
 								<java-version>${java.version}</java-version>
-								<brick-version>${brick.modules.version}</brick-version>
 								<spring-restdocs-version>${spring-restdocs.version}</spring-restdocs-version>
 								<basedir>${project.basedir}</basedir>
 							</attributes>
