--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -15,7 +15,7 @@
 		<spring-cloud.version>2020.0.1</spring-cloud.version>
 		<bluesky-boot.version>0.0.1-SNAPSHOT</bluesky-boot.version>
 		<!-- tag:asciidoctor-properties[] -->
-		<asciidoctor-maven-plugin.version>1.6.0</asciidoctor-maven-plugin.version>
+		<asciidoctor-maven-plugin.version>2.1.0</asciidoctor-maven-plugin.version>
 		<spring-doc-resources.version>0.2.5</spring-doc-resources.version>
 		<spring-asciidoctor-extensions.version>0.5.1</spring-asciidoctor-extensions.version>
 		<refdocs.build.directory>${project.build.directory}/refdocs/</refdocs.build.directory>
@@ -144,6 +144,7 @@
 	<build>
 		<pluginManagement>
 			<plugins>
+				<!-- (s) sonarqube plugin -->
 				<plugin>
 					<groupId>org.apache.maven.plugin</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
@@ -175,6 +176,101 @@
 						</execution>
 					</executions>
 				</plugin>
+				<!-- (e) sonarqube plugin -->
+				
+				<!-- (s) asciidoctor plugin -->
+				<plugin>
+					<groupId>com.googlecode.maven-download-plugin</groupId>
+					<artifactId>download-maven-plugin</artifactId>
+					<executions>
+						<execution>
+							<id>unpack-doc-resources</id>
+							<phase>generate-resources</phase>
+							<goals>
+								<goal>wget</goal>
+							</goals>
+							<configuration>
+								<url>https://repo.spring.io/release/io/spring/docresources/spring-doc-resources/${spring-doc-resources.version}/spring-doc-resources-${spring-doc-resources.version}.zip</url>
+								<unpack>true</unpack>
+								<outputDirectory>${refdocs.build.directory}</outputDirectory>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+					<executions>
+						<execution>
+							<id>copy-asciidoc-resources</id>
+							<phase>generate-resources</phase>
+							<goals>
+								<goal>copy-resources</goal>
+							</goals>
+							<configuration>
+								<outputDirectory>${refdocs.build.directory}</outputDirectory>
+								<resources>
+									<resource>
+										<directory>src/main/asciidoc</directory>
+										<filtering>false</filtering>
+									</resource>
+								</resources>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.asciidoctor</groupId>
+					<artifactId>asciidoctor-maven-plugin</artifactId>
+					<version>${asciidoctor-maven-plugin.version}</version>
+					<dependencies>
+						<dependency>
+							<groupId>org.springframework.restdocs</groupId>
+							<artifactId>spring-restdocs-asciidoctor</artifactId>
+							<version>${spring-restdocs.version}</version>
+						</dependency>
+						<dependency>
+							<groupId>io.spring.asciidoctor</groupId>
+							<artifactId>spring-asciidoctor-extensions-block-switch</artifactId>
+							<version>${spring-asciidoctor-extensions.version}</version>
+						</dependency>
+						<dependency>
+							<groupId>io.spring.asciidoctor</groupId>
+							<artifactId>spring-asciidoctor-extensions-spring-boot</artifactId>
+							<version>${spring-asciidoctor-extensions.version}</version>
+						</dependency>
+					</dependencies>
+					<configuration>
+						<sourceDirectory>${refdocs.build.directory}</sourceDirectory>
+					</configuration>
+					<executions>
+						<execution>
+							<id>asciidoc-to-html</id>
+							<phase>prepare-package</phase>
+							<goals>
+								<goal>process-asciidoc</goal>
+							</goals>
+							<configuration>
+								<outputDirectory>${asciidocs.output.directory}</outputDirectory>
+								<preserveDirectories>true</preserveDirectories>
+								<backend>html5</backend>
+								<doctype>book</doctype>
+								<attributes>
+									// these attributes are required to use the doc resources
+									<docinfo>shared</docinfo>
+									<stylesdir>css/</stylesdir>
+									<stylesheet>spring.css</stylesheet>
+									<linkcss>true</linkcss>
+									<icons>font</icons>
+									<highlightjsdir>js/highlight</highlightjsdir>
+									<highlightjs-theme>github</highlightjs-theme>
+									<source-highlighter>highlight.js</source-highlighter>
+								</attributes>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+				<!-- (e) asciidoctor plugin -->
 				<plugin>
 					<groupId>com.google.cloud.tools</groupId>
 					<artifactId>jib-maven-plugin</artifactId>
@@ -210,94 +306,14 @@
 					<plugin>
 						<groupId>com.googlecode.maven-download-plugin</groupId>
 						<artifactId>download-maven-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>unpack-doc-resources</id>
-								<phase>generate-resources</phase>
-								<goals>
-									<goal>wget</goal>
-								</goals>
-								<configuration>
-									<url>https://repo.spring.io/release/io/spring/docresources/spring-doc-resources/${spring-doc-resources.version}/spring-doc-resources-${spring-doc-resources.version}.zip</url>
-									<unpack>true</unpack>
-									<outputDirectory>${refdocs.build.directory}</outputDirectory>
-								</configuration>
-							</execution>
-						</executions>
 					</plugin>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-resources-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>copy-asciidoc-resources</id>
-								<phase>generate-resources</phase>
-								<goals>
-									<goal>copy-resources</goal>
-								</goals>
-								<configuration>
-									<outputDirectory>${refdocs.build.directory}</outputDirectory>
-									<resources>
-										<resource>
-											<directory>src/main/asciidoc</directory>
-											<filtering>false</filtering>
-										</resource>
-									</resources>
-								</configuration>
-							</execution>
-						</executions>
-						<configuration>
-							<sourceDirectory>${refdocs.build.directory}</sourceDirectory>
-						</configuration>
 					</plugin>
 					<plugin>
 						<groupId>org.asciidoctor</groupId>
 						<artifactId>asciidoctor-maven-plugin</artifactId>
-						<version>${asciidoctor-maven-plugin.version}</version>
-						<dependencies>
-							<dependency>
-								<groupId>org.springframework.restdocs</groupId>
-								<artifactId>spring-restdocs-asciidoctor</artifactId>
-								<version>${spring-restdocs.version}</version>
-							</dependency>
-							<dependency>
-								<groupId>io.spring.asciidoctor</groupId>
-								<artifactId>spring-asciidoctor-extensions-block-switch</artifactId>
-								<version>${spring-asciidoctor-extensions.version}</version>
-							</dependency>
-							<dependency>
-								<groupId>io.spring.asciidoctor</groupId>
-								<artifactId>spring-asciidoctor-extensions-spring-boot</artifactId>
-								<version>${spring-asciidoctor-extensions.version}</version>
-							</dependency>
-						</dependencies>
-						<executions>
-							<execution>
-								<id>asciidoc-to-html</id>
-								<phase>prepare-package</phase>
-								<goals>
-									<goal>process-asciidoc</goal>
-								</goals>
-								<configuration>
-									<sourceDirectory>${refdocs.build.directory}</sourceDirectory>
-									<outputDirectory>${asciidocs.output.directory}</outputDirectory>
-									<preserveDirectories>true</preserveDirectories>
-									<backend>html5</backend>
-									<doctype>book</doctype>
-									<attributes>
-										// these attributes are required to use the doc resources
-										<docinfo>shared</docinfo>
-										<stylesdir>css/</stylesdir>
-										<stylesheet>spring.css</stylesheet>
-										<linkcss>true</linkcss>
-										<icons>font</icons>
-										<highlightjsdir>js/highlight</highlightjsdir>
-										<highlightjs-theme>github</highlightjs-theme>
-										<source-highlighter>highlight.js</source-highlighter>
-									</attributes>
-								</configuration>
-							</execution>
-						</executions>
 					</plugin>
 				</plugins>
 			</build>
